Make 'Add filter' button wrap correctly on smaller screens

--- a/src/sass/components/_forms.scss
+++ b/src/sass/components/_forms.scss
@@ -635,6 +635,7 @@ fieldset#filters {
 
   div.add-filter {
     padding-top: $table-condensed-cell-padding;
+    float: right;
   }
 }
 
